[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Shotgun.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Interaction.gd" type="Script" id=3]
[ext_resource path="res://shotgun.obj" type="ArrayMesh" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.75
height = 1.25

[sub_resource type="CapsuleMesh" id=2]
radius = 0.75
mid_height = 1.25

[sub_resource type="CylinderShape" id=3]

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
script = ExtResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0799942, 0.948165, -0.0174482 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.12871 )

[node name="RayCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="Interact" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 2
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Head/Camera"]
transform = Transform( -23, 0, -7.49435e-06, 0, 23, 0, 7.49435e-06, 0, -23, 0.753043, -0.596714, -0.693424 )
mesh = ExtResource( 4 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null
material/11 = null
material/12 = null
material/13 = null
material/14 = null
material/15 = null
material/16 = null
material/17 = null
material/18 = null
material/19 = null
material/20 = null
material/21 = null
material/22 = null
material/23 = null
material/24 = null
material/25 = null
material/26 = null
material/27 = null
material/28 = null
material/29 = null
material/30 = null
material/31 = null
material/32 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Weapon" type="Node" parent="."]
script = ExtResource( 2 )
fire_rate = 1.0
clip_size = 2

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="PainThreshold" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Regen" type="Timer" parent="."]
wait_time = 10.0
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Regen" to="." method="_on_Regen_timeout"]
